--- a/tecdoc/templates/info.html
+++ b/tecdoc/templates/info.html
@@ -34,8 +34,8 @@
         {% endfor %}
     </ul>
     {% endif %}
-    {% if data_image %}
-        {% for i in data_image %}
+    {% if article_info %}
+        {% for i in article_info %}
         <h3 style="text-align: center; margin:10px">{{i.NormalizedDescription}} <b>{{i.DataSupplierArticleNumber}}</b> {{i.description}}</h3>
     <div class="media">    
         <div>
@@ -43,11 +43,11 @@
         </div>
         {% endfor %}
         
-        {% if data_article %}
+        {% if article_desc %}
         <div class='panel-body'>
             <table class='table table-striped'>
                 <tbody>
-                {% for i in data_article %}
+                {% for i in article_desc %}
                 <tr>
                     <td><b>{{i.description}}</b></td>
                     <td>{{i.displayvalue}}</td>
@@ -60,10 +60,10 @@
     </div>
     {% endif %}
     
-    {% if data_crosses %}
+    {% if article_crosses %}
     <h3 style="text-align:center; margin: 10px 0">Кроссы</h3>
     <ul class="grid-crosses">
-        {% for i in data_crosses %}
+        {% for i in article_crosses %}
             <li aria-label="{{i.PartsDataSupplierArticleNumber}} {{i.brand}}" target="_self">
                 {{i.PartsDataSupplierArticleNumber}}
                 <strong>{{i.brand}}</strong>
