--- a/tecdoc/templates/base.html
+++ b/tecdoc/templates/base.html
@@ -10,6 +10,25 @@
     {% block title %}
     My First Project
     {% endblock %}
+    {% block navbar %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Tenth navbar example">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Главная</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="info">Info</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="login">Disabled</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    {% endblock %}
 {% block content %}
     {% block base %}
     {% endblock %}
