--- a/tecdoc/templates/info.html
+++ b/tecdoc/templates/info.html
@@ -7,7 +7,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     {% endblock %}
-{% block base %}
+{% block content %}
 <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8">
