--- a/tecdoc/templates/admin.html
+++ b/tecdoc/templates/admin.html
@@ -1,6 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="jumbotron">
-    <h1>Not Found</h1>
-</div>
+<h1>Admin</h1>
 {% endblock %}
