--- a/tecdoc/templates/login.html
+++ b/tecdoc/templates/login.html
@@ -5,19 +5,27 @@
 {% endblock %}
 {% block navbar %}
 {% endblock %}
-{% block base %}
-    <p>{{msg}}</p>
+{% block content %}
+
+
     <div class="login-box">
+        {% with messeges = get_flashed_messages(with_categories=true) %}
+          {% if messeges %}
+            {% for category, messege in messeges %}
+              <p class="alert alert-{{category}}">{{ messege }}</p>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
         <div class="wrap-img">
             <img class="mb-4" src="{{ url_for('static', filename='img/logotype.png') }}" alt="" height="57">
         </div>
         <form method="POST">
           <div class="user-box">
-            <input type="text" name="login" required="">
+            <input type="text" name="login">
             <label>Логин</label>
           </div>
           <div class="user-box">
-            <input type="password" name="password" required="">
+            <input type="password" name="password">
             <label>Пароль</label>
           </div>
           <div class="wrap-button">
