--- a/tecdoc/static/style/style.css
+++ b/tecdoc/static/style/style.css
@@ -5,6 +5,28 @@ html {
     margin:0;
     padding:0;
     font-family: sans-serif;
+    background: linear-gradient(#141e30, #243b55);
+  }
+  
+  .container{
+    margin: 15px;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+  .modal .login-box {
+    background: #161718;
   }
   
   .login-box {
@@ -46,23 +68,15 @@ html {
   }
   .login-box .user-box label {
     position: absolute;
-    top:0;
+    top: -20px;
     left: 0;
     padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
+    font-size: 12px;
+    color: #cc0000;
     pointer-events: none;
     transition: .5s;
   }
-  
-  .login-box .user-box input:focus ~ label,
-  .login-box .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #cc0000;
-    font-size: 12px;
-  }
-  
+
   .login-box form button {
     border: 0;
     position: relative;
@@ -180,4 +194,7 @@ html {
     display: inline-block;
     margin: 5px
   }
-  
+
+  .users-table {
+    margin: 20px 0
+  }
