--- a/tecdoc/templates/_navbar.html
+++ b/tecdoc/templates/_navbar.html
@@ -6,15 +6,15 @@
             <a class="nav-link" href="/">Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="info">Info</a>
+            <a class="nav-link" href="/info">Поиск</a>
           </li>
           {% if session['is_admin'] %}
           <li class="nav-item">
-            <a class="nav-link" href="admin">Админ</a>
+            <a class="nav-link" href="/admin">Админ</a>
           </li>
           {% endif %}
           <li class="nav-item">
-            <a class="nav-link" href="logout">Выйти</a>
+            <a class="nav-link" href="/logout">Выйти</a>
           </li>
         </ul>
       </div>
