--- a/tecdoc/templates/_navbar.html
+++ b/tecdoc/templates/_navbar.html
@@ -16,6 +16,11 @@
           <li class="nav-item">
             <a class="nav-link" href="/logout">Выйти</a>
           </li>
+          {% if session['login'] %}
+          <li class="nav-item">
+            <a class="nav-link">{{session['user_name']}}</a>
+            {% endif %}
+          </li>
         </ul>
       </div>
     </div>
