--- a/tecdoc/templates/index.html
+++ b/tecdoc/templates/index.html
@@ -56,7 +56,7 @@
                     <form action="info">
                         <input style="display: none;" type="text" name="article" value="{{i.FoundString.replace(' ', '')}}">
                         <input style="display: none;" type="text" name="brand_id" value="{{i.suppliers_id}}">
-                        <input class="btn btn-success" type="submit" name="submit" value="Поиск кроссов" target="self">
+                        <input class="btn btn-success" type="submit" value="Поиск кроссов">
                     </form>
                 </td>
             </tr>
