--- a/tecdoc/templates/base.html
+++ b/tecdoc/templates/base.html
@@ -1,11 +1,6 @@
 {% extends 'bootstrap/base.html' %}
     {% block styles %}
-    <link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.png') }}">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    {% include '_style.html' %}
     {% endblock %}
     {% block title %}
     Automafia
