--- a/tecdoc/templates/info.html
+++ b/tecdoc/templates/info.html
@@ -1,80 +1,96 @@
 {% extends 'base.html' %}
-{% block styles %}
-    <link href="{{ url_for('static', filename='img/favicon.png') }}" rel="icon">
-    <link href="{{ url_for('static', filename='style/style.css') }}" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    {% endblock %}
 {% block content %}
 <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8">
-                <form class="card card-sm" method="GET">
-                    <div class="card-body row no-gutters align-items-center">
+                <form method="GET">
+                    <div class="row no-gutters align-items-center">
                         <div class="col">
                             <input class="form-control form-control-lg form-control-borderless" type="text" name="article" placeholder="Поиск">
                         </div>
                         <div class="col-auto">
-                            <input class="btn btn-lg btn-success" type="submit" name="submit" value="Поиск"/>
+                            <input class="btn btn-lg btn-success" type="submit" value="Поиск"/>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
     {% if all_articles_suppliers %}
-    <ul class="grid-crosses">
-        {% for i in all_articles_suppliers %}
-            <a href="info?article={{i.DataSupplierArticleNumber}}&brand_id={{i.suppliers_id}}&submit=Поиск+кроссов">
-            <li style="border: solid 2px #f1f1f1; text-align:center">
-                {{i.FoundString}} {{i.NormalizedDescription}}
-                <strong>{{i.description}}</strong>
-            </li>
-            </a>
-        {% endfor %}
-    </ul>
+    <div class="table-responsive">
+    <table class="table table-dark search-table" style="margin: 20px auto; width: 80%; text-align: center;">
+    <tbody>
+    {% for article in all_articles_suppliers %}
+      <tr id="row-{{all_articles_suppliers.index(article)+1}}" onclick="location='info?article={{article.DataSupplierArticleNumber}}&brand_id={{article.suppliers_id}}'">
+        <th scope="row">{{article.description}}</th>
+        <td>{{article.FoundString}}</td>
+        <td>{{article.NormalizedDescription}}</td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
+</div>
     {% endif %}
     {% if article_info %}
         {% for i in article_info %}
         <h3 style="text-align: center; margin:10px">{{i.NormalizedDescription}} <b>{{i.DataSupplierArticleNumber}}</b> {{i.description}}</h3>
-    <div class="media">    
+    <div class="media">
+        <div class="image-block">
+        {% if article_img %}
         <div>
-            <img src="static/img/{{request.args.get('brand_id')}}/{{i.PictureName}}">
+            <img id="bigIamge" src="static/img/{{request.args.get('brand_id')}}/{{article_img[0].PictureName}}">
+        </div>
+        {% for i in article_img %}
+            {% set image_name=request.args.get('brand_id')+'/'+i.PictureName %}   
+            <div onclick="replaceImage('static/img/{{image_name}}')" class="sub-photo">
+                <img src="static/img/{{request.args.get('brand_id')}}/{{i.PictureName}}">
+            </div>
+        {% endfor %}
+        {% endif %}
         </div>
         {% endfor %}
         
         {% if article_desc %}
         <div class='panel-body'>
-            <table class='table table-striped'>
+            <table class='table table-striped table-dark'>
                 <tbody>
                 {% for i in article_desc %}
                 <tr>
                     <td><b>{{i.description}}</b></td>
                     <td>{{i.displayvalue}}</td>
-                    <td><a href="#" class="btn btn-primary" title="Редактировать">Редактировать</a></td>
+                    <!-- <td><a href="#" class="btn btn-primary" title="Редактировать">Редактировать</a></td> -->
                 </tr>
                 {% endfor %}
                 </tbody>
             </table>
+            <div class="text-center">
+                <button class="btn btn-primary" title="Редактировать">Редактировать</button>
+            </div>
         </div>
     {% endif %}
     </div>
     {% endif %}
     
     {% if article_crosses %}
-    <a href="#" class="btn btn-primary" title="Добавить кроссы">Добавить кроссы</a>
-    <h3 style="text-align:center; margin: 10px 0">Кроссы</h3>
-    
+    <div style="text-align:center; margin: 10px 0">
+        <div><h3>Кроссы</h3></div>
+        <div><a href="#" class="btn btn-primary" title="Добавить кроссы">Добавить кроссы</a></div>
+    </div>
     <ul class="grid-crosses">
         {% for i in article_crosses %}
-            <li aria-label="{{i.PartsDataSupplierArticleNumber}} {{i.brand}}" target="_self">
-                {{i.PartsDataSupplierArticleNumber}}
+            <li>
+                <a href="/info?article={{i.PartsDataSupplierArticleNumber}}&brand_id={{i.id}}">
+                    {{i.PartsDataSupplierArticleNumber}}
                 <strong>{{i.brand}}</strong>
+                </a>
             </li>
         {% endfor %}
     </ul>
     {% endif %}
 </div>
-
+<script type="text/javascript">
+    function replaceImage(img) {
+        var inp = document.getElementById("bigIamge")
+        inp.setAttribute('src', img);
+    }
+</script>
 {% endblock %}
