--- a/tecdoc/static/style/style.css
+++ b/tecdoc/static/style/style.css
@@ -68,6 +68,23 @@ html {
     outline: none;
     background: transparent;
   }
+
+  .login-box .user-box select {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
+  }
+
+  .login-box .user-box select option {
+    color: black;
+  }
+
   .login-box .user-box label {
     position: absolute;
     top: -20px;
@@ -226,5 +243,5 @@ html {
     height: 50px;
   }
   .panel-body {
-    width: 60%;
+    width: 100%;
   }
